testdata/baselines/reference/submodule/conformance/jsDeclarationsClassExtendsVisibility.errors.txt
cls.js(8,16): error TS2339: Property 'Strings' does not exist on type 'typeof Foo'.


==== cls.js (1 errors) ====
    const Bar = require("./bar");
    const Strings = {
        a: "A",
        b: "B"
    };
    class Foo extends Bar {}
    module.exports = Foo;
    module.exports.Strings = Strings;
                   ~~~~~~~
!!! error TS2339: Property 'Strings' does not exist on type 'typeof Foo'.
==== bar.js (0 errors) ====
    class Bar {}
    module.exports = Bar;